[tool.isort]
profile = "black"
combine_as_imports = true
add_imports = ["from __future__ import annotations"]

[tool.mypy]
disallow_untyped_defs = true

[tool.coverage.run]
source = ["hcloud"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.main]
py-version = "3.8"
recursive = true
jobs = 0

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint."messages control"]
disable = [
  "fixme",
  "line-too-long",
  "missing-class-docstring",
  "missing-module-docstring",
  "redefined-builtin",
  "duplicate-code",
  # Consider disabling line-by-line
  "too-few-public-methods",
  "too-many-public-methods",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-lines",
]
